--- a/apps/lidarr/Dockerfile
+++ b/apps/lidarr/Dockerfile
@@ -16,7 +16,7 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 USER root
 
 #hadolint ignore=DL3018
-RUN apk add --no-cache ca-certificates chromaprint ffmpeg icu-libs libintl sqlite-libs xmlstarlet
+RUN apk add --no-cache ca-certificates chromaprint ffmpeg icu-libs libintl sqlite-libs xmlstarlet postgresql-client
 #hadolint ignore=DL3059
 RUN \
     case "${TARGETPLATFORM}" in \
