--- a/apps/readarr/Dockerfile
+++ b/apps/readarr/Dockerfile
@@ -24,7 +24,7 @@ RUN go build -ldflags="-linkmode external -extldflags -static" -o importarr cmd/
 
 
 ARG VERSION
-FROM ghcr.io/elfhosted/alpine:rolling@sha256:9fe67d87930b27bf9f7743ac1a4fe4d6b614d3ac94420babdffe243888a3e36d 
+FROM ghcr.io/elfhosted/alpine-edge:rolling@sha256:31272a3b40aa1d0e1471d0429b99ac6ef9a35d5c54aa584881b54924043f83bc
 
 ARG TARGETPLATFORM
 ARG VERSION
