fix for webstreamr
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/webstreamr/Dockerfile
+++ b/apps/webstreamr/Dockerfile
@@ -29,4 +29,4 @@ COPY --from=builder /app/node_modules ./node_modules
 
 ENV NODE_ENV=production
 
-CMD ["node", "dist/server.js"]
+CMD ["node", "dist/index.js"]
