add s5cmd to webhook-receiver
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/webhook-receiver/Dockerfile
+++ b/apps/webhook-receiver/Dockerfile
@@ -13,7 +13,7 @@ RUN         curl -L --silent -o webhook.tar.gz https://github.com/adnanh/webhook
             rm -rf /var/cache/apk/* && \
             rm -rf /go
 
-FROM        ghcr.io/elfhosted/alpine:rolling@sha256:42c34434da805c1c907c64e360538654a84379cd5bbfba10a73870c50db44a87 
+FROM        ghcr.io/elfhosted/alpine:rolling@sha256:9fe67d87930b27bf9f7743ac1a4fe4d6b614d3ac94420babdffe243888a3e36d 
 COPY        --from=build /usr/local/bin/webhook /usr/local/bin/webhook
 RUN         apk add --update curl jq yq gettext git openssh-client github-cli
 
@@ -21,6 +21,13 @@ RUN         apk add --update curl jq yq gettext git openssh-client github-cli
 RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
    	install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl && \
 	rm kubectl
+
+# Add s5cmd
+RUN cd /tmp && \
+    curl -LO https://github.com/peak/s5cmd/releases/latest/download/s5cmd_Linux-64bit.tar.gz && \
+    tar -xzf s5cmd_Linux-64bit.tar.gz && \
+    mv s5cmd /usr/local/bin/ && \
+    chmod +x /usr/local/bin/s5cmd
 
 WORKDIR     /etc/webhook
 VOLUME      ["/etc/webhook"]
