--- a/apps/decypharr/beta/Dockerfile
+++ b/apps/decypharr/beta/Dockerfile
@@ -68,6 +68,6 @@ VOLUME ["/app"]
 USER elfie:elfie
 
 # So that the app will start for goss tests
-COPY --chown=elfie:elfie apps/decypharr/config.json /config/
+COPY --chown=elfie:elfie apps/decypharr/config.json /app/config/
 
 CMD ["/usr/bin/decypharr", "--config", "/app"]
