--- a/apps/seerrbridge/Dockerfile
+++ b/apps/seerrbridge/Dockerfile
@@ -71,6 +71,7 @@ COPY --from=cloner /source/. .
 # We store our env in /config/.env
 RUN  sed -i "s|'.env|'/config/.env|" seerrbridge.py && \
      sed -i 's|seerrbridge.log|/logs/seerrbridge.log|' seerrbridge.py && \
+     sed -i 's|seerbridge.log|/logs/seerbridge.log|' seerrbridge.py && \
      sed -i 's|episode_discrepancies.json|/config/episode_discrepancies.json|' seerrbridge.py
 
 # Expose the application port (if needed)
