update for decypharr v.10.0
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/decypharr/Dockerfile
+++ b/apps/decypharr/Dockerfile
@@ -4,7 +4,7 @@ RUN apk add --update --no-cache tmux ttyd git && \
     git clone -b $VERSION https://github.com/sirrobot01/debrid-blackhole.git  /source
 
 # Stage 1: Build binaries
-FROM --platform=$BUILDPLATFORM golang:1.23-alpine as builder
+FROM --platform=$BUILDPLATFORM golang:1.24-alpine as builder
 
 ARG TARGETOS
 ARG TARGETARCH
@@ -24,8 +24,8 @@ RUN --mount=type=cache,target=/go/pkg/mod \
     --mount=type=cache,target=/root/.cache/go-build \
     CGO_ENABLED=0 GOOS=$TARGETOS GOARCH=$TARGETARCH \
     go build -trimpath \
-    -ldflags="-w -s -X github.com/sirrobot01/debrid-blackhole/pkg/version.Version=${VERSION} -X github.com/sirrobot01/debrid-blackhole/pkg/version.Channel=${CHANNEL}" \
-    -o /blackhole
+    -ldflags="-w -s -X github.com/sirrobot01/decypharr/pkg/version.Version=${VERSION} -X github.com/sirrobot01/decypharr/pkg/version.Channel=${CHANNEL}" \
+    -o /decypharr
 
 # Build healthcheck (optimized)
 RUN --mount=type=cache,target=/go/pkg/mod \
@@ -37,6 +37,7 @@ RUN --mount=type=cache,target=/go/pkg/mod \
 # Stage 2: Create directory structure
 FROM alpine:3.19 as dirsetup
 RUN mkdir -p /app/logs && \
+    mkdir -p /app/cache && \
     chmod 777 /app/logs && \
     touch /app/logs/decypharr.log && \
     chmod 666 /app/logs/decypharr.log
@@ -48,28 +49,25 @@ FROM ghcr.io/elfhosted/alpine:rolling@sha256:42c34434da805c1c907c64e360538654a84
 
 LABEL version = "${VERSION}-${CHANNEL}"
 
-LABEL org.opencontainers.image.source = "https://github.com/sirrobot01/debrid-blackhole"
-LABEL org.opencontainers.image.title = "debrid-blackhole"
+LABEL org.opencontainers.image.source = "https://github.com/sirrobot01/decypharr"
+LABEL org.opencontainers.image.title = "decypharr"
 LABEL org.opencontainers.image.authors = "sirrobot01"
-LABEL org.opencontainers.image.documentation = "https://github.com/sirrobot01/debrid-blackhole/blob/main/README.md"
+LABEL org.opencontainers.image.documentation = "https://github.com/sirrobot01/decypharr/blob/main/README.md"
 
 # Copy binaries
-COPY --from=builder --chown=elfie:elfie /blackhole /usr/bin/blackhole
+COPY --from=builder --chown=elfie:elfie /decypharr /usr/bin/decypharr
 COPY --from=builder --chown=elfie:elfie /healthcheck /usr/bin/healthcheck
 
 # Copy pre-made directory structure
 COPY --from=dirsetup --chown=elfie:elfie /app /app
 
 # Metadata
-ENV LOG_PATH=/app/logs
-EXPOSE 8181 8282
-VOLUME ["/app"]
+ENV LOG_PATH=/config/logs
+EXPOSE 8282
+
 USER elfie:elfie
 
 # So that the app will start for goss tests
-COPY apps/decypharr/config.json /config/
+COPY --chown=elfie:elfie apps/decypharr/config.json /config/
 
-HEALTHCHECK CMD ["/usr/bin/healthcheck"]
-
-# We need config to go to /config so that we can mount logs to /app/logs
-CMD ["/usr/bin/blackhole", "--config", "/config"]
+CMD ["/usr/bin/decypharr", "--config", "/config"]
