--- a/apps/wizarr/ci/goss.yaml
+++ b/apps/wizarr/ci/goss.yaml
@@ -4,8 +4,8 @@ process:
   uv:
     running: true
 
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-http:
-  http://localhost:5690:
-    status: 200
-    timeout: 5000
+# # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
+# http:
+#   http://localhost:5690:
+#     status: 200
+#     timeout: 5000
