run as non-root
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/wizarr/Dockerfile
+++ b/apps/wizarr/Dockerfile
@@ -12,6 +12,13 @@ COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 # Install curl separately so it remains available for healthcheck
 RUN apk add --no-cache curl tzdata
 
+COPY --from=cloner /source/docker-entrypoint.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
+# Force our preferred user
+RUN addgroup -S elfie --gid 568 && adduser -S elfie -G elfie --uid 568
+USER 568
+
 # Set up the working directory
 WORKDIR /data
 COPY --from=cloner /source/. /data
@@ -33,8 +40,7 @@ EXPOSE 5690
 
 COPY --from=cloner /source/wizard_steps /opt/default_wizard_steps
 
-COPY --from=cloner /source/docker-entrypoint.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/docker-entrypoint.sh
+
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 CMD uv run gunicorn \
