update path to config
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/seerrbridge/Dockerfile
+++ b/apps/seerrbridge/Dockerfile
@@ -73,8 +73,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the application code
 COPY --from=cloner /source/. .
 
-# We store our env in /config/.env
-# RUN  sed -i "s|'.env|'/config/.env|" seerrbridge.py && \
+We store our env in /config/.env
+RUN  sed -i "s|'.env|'/config/.env|" seerr/config.py #  && \
 #      sed -i 's|seerrbridge.log|/logs/seerrbridge.log|' seerrbridge.py && \
 #      sed -i 's|seerbridge.log|/logs/seerbridge.log|' seerrbridge.py && \
 #      sed -i 's|episode_discrepancies.json|/config/episode_discrepancies.json|' seerrbridge.py
