--- a/apps/storyteller/ci/goss.yaml
+++ b/apps/storyteller/ci/goss.yaml
@@ -1,8 +1,8 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
-# process:
-#   python3:
-#     running: true
+process:
+  node:
+    running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 port:
