apply chrome fix
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/seerrbridge/Dockerfile
+++ b/apps/seerrbridge/Dockerfile
@@ -37,10 +37,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     tmux \
     dialog
 
-# Download and install Chrome (latest stable version)
-RUN CHROME_URL=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json" | \
+# Fetch and install the latest stable Chrome version
+RUN CHROME_VERSION=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json" | \
+    jq -r '.channels.Stable.version') && \
+    CHROME_URL=$(curl -s "https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json" | \
     jq -r '.channels.Stable.downloads.chrome[] | select(.platform == "linux64") | .url') && \
-    echo "Downloading Chrome from: $CHROME_URL" && \
+    echo "Downloading Chrome version ${CHROME_VERSION} from: $CHROME_URL" && \
     wget -O /tmp/chrome-linux64.zip $CHROME_URL && \
     unzip /tmp/chrome-linux64.zip -d /opt/ && \
     mv /opt/chrome-linux64 /opt/chrome && \
