--- a/apps/nuviostreams/dev/Dockerfile
+++ b/apps/nuviostreams/dev/Dockerfile
@@ -9,13 +9,14 @@ RUN git clone https://github.com/tapframe/NuvioStreamsAddon.git /source
 
 FROM node:20-alpine
 
-RUN addgroup -S elfie --gid 568 \
- && adduser -S elfie -G elfie --uid 568
-
-USER elfie
-
 # Set working directory
 WORKDIR /app
+
+RUN addgroup -S elfie --gid 568 \
+ && adduser -S elfie -G elfie --uid 568 \
+ && chown elfie:elfie /app
+
+USER elfie
 
 # Copy package files and install dependencies
 COPY --from=cloner /source/package*.json ./
