--- a/apps/cli_debrid/dev/goss.yaml
+++ b/apps/cli_debrid/dev/goss.yaml
@@ -9,4 +9,6 @@ http:
   http://localhost:5000:
     status: 200
     timeout: 5000
-
+  http://localhost:5001:
+    status: 200
+    timeout: 5000    
