--- a/apps/postiz/ci/goss.yaml
+++ b/apps/postiz/ci/goss.yaml
@@ -1,18 +1,18 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
-process:
-  python3:
-    running: true
-  ttyd:
-    running: true    
+# process:
+#   python3:
+#     running: true
+#   ttyd:
+#     running: true    
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 port:
   # https://github.com/aelsabbahy/goss/issues/149
-  tcp:3001:
+  tcp:5000:
     listening: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
-  http://localhost:3001:
+  http://localhost:5000:
     status: 200
