--- a/apps/peertube/cli/Dockerfile
+++ b/apps/peertube/cli/Dockerfile
@@ -9,14 +9,15 @@ RUN apk add --no-cache \
     bash \
     openssl \
     curl \
-    jq
+    jq \
+    git
 
-RUN npm install -g @peertube/peertube-cli
+RUN git clone https://github.com/Reseau-Canope/peertube-mass-uploader.git /opt/peertube-mass-uploader && \
+    npm install -g @peertube/peertube-cli
 
 COPY --chown=568:568 apps/peertube/cli/peertube-cli.sh /
 COPY --chown=568:568 apps/peertube/cli/launch-tmux.sh /
 COPY --chown=568:568 apps/peertube/cli/entrypoint.sh /
-COPY --chown=568:568 apps/peertube/cli/restricted.tmux.conf /
 
 RUN mkdir -p /home/elfie && chown -R elfie /home/elfie
 
