--- a/apps/zurg-rc/Dockerfile
+++ b/apps/zurg-rc/Dockerfile
@@ -16,7 +16,7 @@ ARG GitCommit
 ARG Version
 WORKDIR /app
 COPY --from=cloner /source/. .
-RUN apk add --no-cache bash git go gcc musl-dev curl fuse libxml2-utils
+RUN apk add --no-cache bash git go gcc musl-dev curl fuse libxml2-utils socat
 RUN go build -ldflags "-s -w -X 'github.com/debridmediamanager/zurg/internal/version.BuiltAt=$BuiltAt' -X 'github.com/debridmediamanager/zurg/internal/version.GitCommit=$GitCommit' -X 'github.com/debridmediamanager/zurg/internal/version.Version=$Version'" -o zurg ./cmd/zurg
 
 FROM ghcr.io/elfhosted/alpine:3.19.1@sha256:dfb0a18161228f317ed4c96630d70d7855d546a522c0017cbe76b907dabae8ec
@@ -28,6 +28,6 @@ COPY --from=cloner /source/config.example.yml /config/config.yml
 # Install runtime dependencies and configure FUSE
 RUN apk add curl python3 libxml2-utils ffmpeg socat
 
-COPY ./apps/zurg/entrypoint.sh /entrypoint.sh
+COPY ./apps/zurg-rc/entrypoint.sh /entrypoint.sh
 
 CMD ["/entrypoint.sh"]
