--- a/apps/plexytrack/ci/goss.yaml
+++ b/apps/plexytrack/ci/goss.yaml
@@ -5,6 +5,6 @@ process:
     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-# http:
-#   http://localhost:7777:
-#     status: 200
+http:
+  http://localhost:5030:
+    status: 200
