--- a/apps/csi-rclone/Dockerfile
+++ b/apps/csi-rclone/Dockerfile
@@ -11,11 +11,11 @@ RUN git clone https://github.com/elfhosted/csi-rclone-reloaded.git /source
 FROM golang:alpine AS builder
 RUN apk update && apk add --no-cache git make bash
 WORKDIR $GOPATH/src/csi-rclone-nodeplugin
-COPY . .
+COPY --from=cloner /source/. .
 RUN make plugin
 
 ####
-FROM alpine:3.16
+FROM alpine:3.21
 RUN apk add --no-cache ca-certificates bash fuse curl unzip tini
 
 RUN curl https://rclone.org/install.sh | bash
