add python3 to tooling image
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/tooling/Dockerfile
+++ b/apps/tooling/Dockerfile
@@ -40,6 +40,7 @@ RUN apt-get update && apt-get install -y \
 	rsync \
 	wget \
 	sqlite3 \
+	python3 \
 	--no-install-recommends \
 	&& rm -rf /var/lib/apt/lists/* && \
 	cd /tmp && \
